--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -130,9 +130,6 @@
     <ClCompile Include="sha3\sph_hefty1.c">
       <Filter>sph</Filter>
     </ClCompile>
-    <ClCompile Include="crypto\aesb-x86-impl.c">
-      <Filter>arch\x86</Filter>
-    </ClCompile>
     <ClCompile Include="lyra2\Lyra2.c">
       <Filter>crypto</Filter>
     </ClCompile>
@@ -163,7 +160,7 @@
     <ClCompile Include="nist5.c" />
     <ClCompile Include="qubit.c" />
     <ClCompile Include="api.c" />
-    <ClCompile Include="sensors.c" />
+    <ClCompile Include="sysinfos.c" />
     <ClCompile Include="compat\jansson\error.c">
       <Filter>jansson</Filter>
     </ClCompile>
@@ -256,7 +253,7 @@
     <ClInclude Include="miner.h">
       <Filter>headers</Filter>
     </ClInclude>
-    <ClInclude Include="cpuminer-config.h">
+    <ClInclude Include="compat\cpuminer-config.h">
       <Filter>headers</Filter>
     </ClInclude>
     <ClInclude Include="..\ccminer\compat\jansson\jansson.h">
