--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -210,6 +210,7 @@
     <ClCompile Include="algo\neoscrypt.c" />
     <ClCompile Include="algo\nist5.c" />
     <ClCompile Include="algo\pentablake.c" />
+    <ClCompile Include="algo\pluck.c" />
     <ClCompile Include="algo\quark.c" />
     <ClCompile Include="algo\qubit.c" />
     <ClCompile Include="algo\sha2.c" />
