--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -233,6 +233,9 @@
     <ClCompile Include="algo\x15.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\pluck.c">
+      <Filter>algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sha3\sph_blake.h">
