basic ZR5 algo, without PoK "encryption" support
Working on testnet and suprnova's longpoll pool

Signed-off-by: Tanguy Pruvot <tanguy.pruvot@gmail.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -70,7 +70,8 @@ cpuminer_SOURCES = \
   algo/x11.c \
   algo/x13.c \
   algo/x14.c \
-  algo/x15.c
+  algo/x15.c \
+  algo/zr5.c
 
 disable_flags =
 
