--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -236,6 +236,9 @@
     <ClCompile Include="algo\pluck.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\zr5.c">
+      <Filter>algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sha3\sph_blake.h">
