--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -239,6 +239,9 @@
     <ClCompile Include="algo\zr5.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\skein2.c">
+      <Filter>algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sha3\sph_blake.h">
