--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -248,6 +248,12 @@
     <ClCompile Include="algo\animecoin.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\blake2.c">
+      <Filter>algo</Filter>
+    </ClCompile>
+    <ClCompile Include="algo\drop.c">
+      <Filter>algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sha3\sph_blake.h">
@@ -494,4 +500,3 @@
     </ResourceCompile>
   </ItemGroup>
 </Project>
-
