--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -201,6 +201,7 @@
       <Optimization Condition="'$(Configuration)'=='Release'">Full</Optimization>
     </ClCompile>
     <ClCompile Include="algo\animecoin.c" />
+    <ClCompile Include="algo\axiom.c" />
     <ClCompile Include="algo\blake.c" />
     <ClCompile Include="algo\blakecoin.c" />
     <ClCompile Include="algo\blake2.c" />
