--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -260,6 +260,9 @@
     <ClCompile Include="algo\bmw256.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\axiom.c">
+      <Filter>algo</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="sha3\sph_blake.h">
