--- a/cpuminer.vcxproj
+++ b/cpuminer.vcxproj
@@ -207,6 +207,7 @@
     <ClCompile Include="algo\blake2.c" />
     <ClCompile Include="algo\bmw256.c" />
     <ClCompile Include="algo\c11.c" />
+    <ClCompile Include="algo\cryptolight.c" />
     <ClCompile Include="algo\cryptonight.c" />
     <ClCompile Include="algo\drop.c" />
     <ClCompile Include="algo\fresh.c" />
