--- a/cpuminer.vcxproj.filters
+++ b/cpuminer.vcxproj.filters
@@ -197,6 +197,9 @@
     <ClCompile Include="algo\lyra2re.c">
       <Filter>algo</Filter>
     </ClCompile>
+    <ClCompile Include="algo\lyra2rev2.c">
+      <Filter>algo</Filter>
+    </ClCompile>
     <ClCompile Include="algo\myr-groestl.c">
       <Filter>algo</Filter>
     </ClCompile>
